Arrows added, View button added to overview

--- a/StockManager/Views/Dashboard/Index.cshtml
+++ b/StockManager/Views/Dashboard/Index.cshtml
@@ -10,7 +10,7 @@
 </h3>
 
 <div class="row">
-    @Html.Partial("_Expenses", Model)
+    @Html.Partial("_Header", Model)
 </div>
 
 <div class="row">
