--- a/StockManager/Views/Dashboard/_Header.cshtml
+++ b/StockManager/Views/Dashboard/_Header.cshtml
@@ -11,7 +11,7 @@
         </div>
         <a class="more" href="javascript:;">
             View more
-            <i class="m-icon-swapright m-icon-white"></i>
+            <i class="fa fa-arrow-right"></i>
         </a>
     </div>
 </div>
@@ -21,14 +21,14 @@
             <i class="fa fa-shopping-cart"></i>
         </div>
         <div class="details">
-            <div class="number"> 
-            Rs @( (Model.totalPurchases.HasValue) ? Model.totalPurchases.Value : 0)
+            <div class="number">
+                Rs @( (Model.totalPurchases.HasValue) ? Model.totalPurchases.Value : 0)
             </div>
             <div class="desc"> Total Purchases </div>
         </div>
         <a class="more" href="javascript:;">
             View more
-            <i class="m-icon-swapright m-icon-white"></i>
+            <i class="fa fa-arrow-right"></i>
         </a>
     </div>
 </div>
@@ -43,7 +43,7 @@
         </div>
         <a class="more" href="javascript:;">
             View more
-            <i class="m-icon-swapright m-icon-white"></i>
+            <i class="fa fa-arrow-right"></i>
         </a>
     </div>
 </div>
