--- a/StockManager/Views/Dashboard/_Overview.cshtml
+++ b/StockManager/Views/Dashboard/_Overview.cshtml
@@ -33,6 +33,7 @@
                                     <th>Product</th>
                                     <th>Sale</th>
                                     <th>Amount</th>
+                                    <th></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -43,6 +44,9 @@
                                             <td>@item.Name</td>
                                             <td>@item.Count</td>
                                             <td>Rs @item.Amount</td>
+                                            <td>
+                                                <a href="#" class="btn btn-default">VIEW</a>
+                                            </td>
                                         </tr>
                                     }
                                 }
@@ -58,6 +62,7 @@
                                     <th>Customer</th>
                                     <th>Count</th>
                                     <th>Amount</th>
+                                    <th></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -68,6 +73,9 @@
                                             <td>@item.Name</td>
                                             <td>@item.Count</td>
                                             <td>Rs @item.Amount</td>
+                                            <td>
+                                                <a href="#" class="btn btn-default">VIEW</a>
+                                            </td>
                                         </tr>
                                     }
                                 }
@@ -83,6 +91,7 @@
                                     <th>Name</th>
                                     <th>Count</th>
                                     <th>Fiscal Purchase</th>
+                                    <th></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -93,6 +102,9 @@
                                             <td>@item.Name</td>
                                             <td>@item.Count</td>
                                             <td>Rs @item.Amount</td>
+                                            <td>
+                                                <a href="#" class="btn btn-default">VIEW</a>
+                                            </td>
                                         </tr>
                                     }
                                 }
@@ -108,6 +120,7 @@
                                     <th> Vendor </th>
                                     <th> Amount </th>
                                     <th> Date </th>
+                                    <th></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -118,9 +131,12 @@
                                             <td>@item.Vendor.VendorName</td>
                                             <td>@item.NetAmount</td>
                                             <td>@item.InvoiceDate.ToString("dd-MMM-yyyy")</td>
+                                            <td>
+                                                <a href="#" class="btn btn-default">VIEW</a>
+                                            </td>
                                         </tr>
                                     }
-                                }  
+                                }
                             </tbody>
                         </table>
                     </div>
