--- a/StockManager/Views/Invoices/SinglePrint.cshtml
+++ b/StockManager/Views/Invoices/SinglePrint.cshtml
@@ -7,119 +7,108 @@
 <!DOCTYPE html>
 
 <html>
-<head>    
-    <title>Single Print</title>
+<head>
+    <title>Print</title>
     <link href="~/assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width" />
+    <style>
+        table thead tr th {
+            background: #aaa;
+        }
+
+        #total_row td {
+            border-top: 2px solid #bbb !important;
+        }
+    </style>
 </head>
 <body>
 
     <div class="container-fluid">
-
-        <div class="row">
-            <div class="col-md-2 col-xs-4">
-                <div class="form-group">
-                    <h4>Invoice #</h4>
-                    <div>
-                        @Model.invoice_no
-                    </div>
-                </div>
+        <div style="margin-bottom: 10px;">
+            @Html.Partial("_ChalanTop")
+        </div>
+        <div class="row" style="margin: 15px 0; font-size: 1.3em">
+            <div class="pull-left">
+                No: <strong>@Model.invoice_no</strong>
             </div>
-            <div class="col-md-4 col-xs-4">
-                <div class="form-group">
-                    <h4>Vendor</h4>
-                    <div>
-                        @Model.Customer.CustomerName
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-xs-4">
-                <div class="form-group">
-                    <h4>Date</h4>
-                    <div>
-                        @(Model.created_on?.ToString("dd-MMM-yyyy"))
-                    </div>
-                </div>
+            <div class="pull-right">
+                Date: <strong>@(Model.created_on?.ToString("dd MMMM, yyyy"))</strong>
             </div>
         </div>
-        <div class="row">
-
-            <div class="col-md-8">
-                <h4>Products</h4>
-                <table id="products_table" class="table">
+        <div class="row" style="margin: 15px 0; font-size: 1.3em">
+            <div>
+                M/s <strong>@Model.Customer.CustomerName</strong>
+            </div>
+        </div>
+        <div class="row" style="margin: 15px 0;">
+            <table class="table table-bordered">
+                <thead>
                     <tr>
-                        <th>Name</th>
-                        <th>Sale rate</th>
-                        <th>Qty</th>
-                        <th>Discount</th>
-                        <th>P.Total</th>
+                        <th style="width: 5%">S.No.</th>
+                        <th>Particulars</th>
+                        <th>Pcs</th>
+                        <th>Rate</th>
                     </tr>
+                </thead>
+                <tbody>
                     @{
                         if (Model.InvoiceDetails.Count() > 0)
                         {
+                            var i = 1;
                             foreach (var item in Model.InvoiceDetails)
                             {
                                 <tr>
                                     <td>
-                                        <div style='margin-top: 5px;'>@item.Product.ProductName</div>
+                                        @i
+                                    </td>
+                                    <td>
+                                        @item.Product.ProductName
                                     </td>
                                     <td style='width: 15%' class='sale'>
-                                        Rs @item.sale_rate
-                                    </td>
-                                    <td style='width: 15%' class='qty'>
                                         @item.quantity
                                     </td>
-
-                                    <td style='width: 15%' class='dscnt'>
-                                        Rs @item.discount
-                                    </td>
-                                    <td class='ptotal'>
-                                        Rs @((item.quantity * item.sale_rate) - item.discount)
+                                    <td style='width: 15%' class='qty'>
+                                        Rs @item.sale_rate
                                     </td>
                                 </tr>
+                                i++;
                             }
                         }
                     }
-                </table>
-            </div>
-            <div class="col-md-4">
-                <h4>Total</h4>
-                <table class="table">
-                    <tr>
-                        <td style="width: 70%">
-                            Subtotal
-                        </td>
-                        <td id="sub_total">
-                            Rs @Model.gross_amount
-                        </td>
+                    <tr id="total_row">
+                        <td></td>
+                        <td style="text-align: right;">Gross</td>
+                        <td style="text-align: right;">Rs</td>
+                        <td>@Model.gross_amount</td>
                     </tr>
                     <tr>
-                        <td>
-                            Discount
-                        </td>
-                        <td>
-                            Rs @Model.discount
-                        </td>
+                        <td></td>
+                        <td style="text-align: right;">Discount</td>
+                        <td style="text-align: right;">Rs</td>
+                        <td>@Model.discount</td>
                     </tr>
                     <tr>
-                        <td>
-                            Total
-                        </td>
-                        <td id="total_discount">
-                            Rs @Model.net_amount
+                        <td></td>
+                        <td style="text-align: right;">Net Total</td>
+                        <td style="text-align: right;">Rs</td>
+                        <td>@Model.net_amount</td>
+                    </tr>
+                    <tr>
+                        <td colspan="4">
+                            <div class="pull-left">
+                                <div>E. & O.E.</div>
+                                <div>Subject to Jaipur Jurisdiction only</div>
+                            </div>
+                            <div class="pull-right">
+                                <div style="margin-top: 20px;">
+                                    For <strong style="font-family: 'Times New Roman'">Durga</strong>
+                                </div>
+                            </div>
                         </td>
                     </tr>
-                </table>
-            </div>
+                </tbody>
+            </table>
         </div>
     </div>
-    <script>
-         setTimeout(function(){
-
-           window.print();
-           window.location.href="@Url.Action("Index")";
-
-         }, 100);
-    </script>
 </body>
 </html>
