--- a/StockManager/Views/Shared/dashboard/sidebar.cshtml
+++ b/StockManager/Views/Shared/dashboard/sidebar.cshtml
@@ -116,8 +116,8 @@
                         </a>
                     </li>
                     <li class="nav-item  ">
-                        <a href="#" class="nav-link ">
-                            <span class="title">Example 2</span>
+                        <a href="@Url.Action("VendorWiseStock", "Report")" class="nav-link ">
+                            <span class="title">Vendor Stock Summary</span>
                         </a>
                     </li>
                 </ul>
