Added Company Filter

--- a/StockManager/Views/Products/UpdateOpeningStock.cshtml
+++ b/StockManager/Views/Products/UpdateOpeningStock.cshtml
@@ -13,7 +13,7 @@
         </div>
         <div class="actions">
             <a href="@Url.Action("Index")" class="btn btn-circle btn-default">
-                <i class="fa fa-plus"></i> Back
+                <i class="fa fa-arrow-left"></i> Back
             </a>
             <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title="">
             </a>
