--- a/StockManager/Views/PrinterChalans/Index.cshtml
+++ b/StockManager/Views/PrinterChalans/Index.cshtml
@@ -56,6 +56,10 @@
                             @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-xs" })
                             |
                             @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { onclick = "return confirm('Are you sure you wish to delete this printer chalan?');", @class = "btn btn-danger btn-xs" })
+                            |
+                            <a target="_blank" class="btn btn-default btn-xs" href="@Url.Action("print-single", new { id = item.Id }) ">
+                                <i class="fa fa-print"></i> Print
+                            </a>
                         </td>
                     </tr>
                 }
