--- a/StockManager/Views/Dashboard/_SalesChart.cshtml
+++ b/StockManager/Views/Dashboard/_SalesChart.cshtml
@@ -13,38 +13,18 @@
             </li>
         </ul>
     </div>
-    <div class="portlet-body">
-        <div class="tab-content">
-            <div class="tab-pane active" id="portlet_ecommerce_tab_1">
-                <div id="statistics_1" class="chart" style="padding: 0px; position: relative;">
+    <div class="portlet-body" style="">
+        <div class="tab-content" style="">
+            <div style="" class="tab-pane active" id="portlet_ecommerce_tab_1">
+                <div id="statistics_1" class="chart" style="height: 100%; padding: 0px; position: relative;">
                     <canvas id="chart1" width="459" height="300"></canvas>
                 </div>
             </div>
             <div class="tab-pane" id="portlet_ecommerce_tab_2">
-                <div id="statistics_2" class="chart">
+                <div id="statistics_2" class="chart" style="height: 100%; padding: 0px; position: relative;">
                     <canvas id="chart2" width="459" height="300"></canvas>
                 </div>
             </div>
         </div>
-        @*<div class="well margin-top-20">
-                <div class="row">
-                    <div class="col-md-3 col-sm-3 col-xs-6 text-stat">
-                        <span class="label label-success"> Revenue: </span>
-                        <h3>$1,234,112.20</h3>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6 text-stat">
-                        <span class="label label-info"> Tax: </span>
-                        <h3>$134,90.10</h3>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6 text-stat">
-                        <span class="label label-danger"> Shipment: </span>
-                        <h3>$1,134,90.10</h3>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6 text-stat">
-                        <span class="label label-warning"> Orders: </span>
-                        <h3>235090</h3>
-                    </div>
-                </div>
-            </div>*@
     </div>
 </div>
