--- a/StockManager/Views/Report/StockLedger.cshtml
+++ b/StockManager/Views/Report/StockLedger.cshtml
@@ -52,22 +52,22 @@
                     {
                         <tr>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Date)
+                                @Html.DisplayFor(modelItem => item.TransactionDate)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Particular)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Doc_Type)
+                                @Html.DisplayFor(modelItem => item.DocType)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Doc_No)
+                                @Html.DisplayFor(modelItem => item.DocNo)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.In_QTY)
+                                @Html.DisplayFor(modelItem => item.InQTY)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Out_QTY)
+                                @Html.DisplayFor(modelItem => item.OutQTY)
                             </td>
                             <td>
                                 
