--- a/StockManager/Views/Products/Edit.cshtml
+++ b/StockManager/Views/Products/Edit.cshtml
@@ -58,7 +58,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.SellingPrice, "Price", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownList("Unit", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.EditorFor(model => model.SellingPrice, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.SellingPrice, "", new { @class = "text-danger" })
                     </div>
                 </div>
