made quantity required field

--- a/StockManager/Views/Products/UpdateOpeningStock.cshtml
+++ b/StockManager/Views/Products/UpdateOpeningStock.cshtml
@@ -52,11 +52,11 @@
 
                                     if (product == null)
                                     {
-                                        @Html.TextBox("Transactions[" + @i + "].Quantity", 0, new { @type = "number" });
+                                        @Html.TextBox("Transactions[" + @i + "].Quantity", 0, new { @type = "number", required = true });
                                     }
                                     else
                                     {
-                                        @Html.TextBox("Transactions[" + @i + "].Quantity", product.Quantity, new { @type = "number" });
+                                        @Html.TextBox("Transactions[" + @i + "].Quantity", product.Quantity, new { @type = "number", required = true });
                                     }
                                 }
                             </td>
