--- a/StockManager/Views/Products/Edit.cshtml
+++ b/StockManager/Views/Products/Edit.cshtml
@@ -90,5 +90,6 @@
     </div>
 </div>
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/js/jquery.validate.min.js"></script>
+    <script src="~/Scripts/js/jquery.validate.unobtrusive.min.js"></script>
 }
