--- a/StockManager/Views/Products/Create.cshtml
+++ b/StockManager/Views/Products/Create.cshtml
@@ -69,10 +69,10 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.IsActive, "Active", htmlAttributes: new { @class = "control-label col-md-2"})
+                    @Html.LabelFor(model => model.IsActive, "Active", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         <div class="checkbox">
-                            @Html.CheckBoxFor(model => model.IsActive, htmlAttributes: new {@checked= true})
+                            @Html.CheckBoxFor(model => model.IsActive, htmlAttributes: new { @checked = true })
                             @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -89,5 +89,6 @@
     </div>
 </div>
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/js/jquery.validate.min.js"></script>
+    <script src="~/Scripts/js/jquery.validate.unobtrusive.min.js"></script>
 }
