--- a/StockManager/Views/Products/Index.cshtml
+++ b/StockManager/Views/Products/Index.cshtml
@@ -69,7 +69,7 @@
                             @Html.DisplayFor(modelItem => item.ProductType.ProductType1)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.SellingPrice)
+                            @Html.DisplayFor(modelItem => item.SellingPrice.Value)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.IsActive)
