Company top header fix

--- a/StockManager/Views/Shared/dashboard/topnav.cshtml
+++ b/StockManager/Views/Shared/dashboard/topnav.cshtml
@@ -66,6 +66,14 @@
                     </span>
                 </div>
             </form>
+            
+            <!-- BEGIN COMPANY INFORMATION -->
+            <div style="display: inline-block; padding-top: 10px;">
+                <h4 style="margin-bottom: 0;">@Session["CompanyName"]</h4>
+                <small>@Session["YearStartDate"] - @Session["YearEndDate"]</small>
+            </div>
+            <!-- END COMPANY INFORMATION -->
+
             <!-- BEGIN TOP NAVIGATION MENU -->
             <div class="top-menu">
                 <ul class="nav navbar-nav pull-right">
