--- a/StockManager/Views/Shared/dashboard/topnav.cshtml
+++ b/StockManager/Views/Shared/dashboard/topnav.cshtml
@@ -68,7 +68,7 @@
             </form>
             
             <!-- BEGIN COMPANY INFORMATION -->
-            <div style="display: inline-block; padding-top: 10px;">
+            <div id="companyDetails">
                 <h4 style="margin-bottom: 0;">@Session["CompanyName"]</h4>
                 <small>@Session["YearStartDate"] - @Session["YearEndDate"]</small>
             </div>
