--- a/StockManager/Views/PrinterChalans/Details.cshtml
+++ b/StockManager/Views/PrinterChalans/Details.cshtml
@@ -88,8 +88,8 @@
                             <th>Qty</th>
                             <th>Fold</th>
                             <th>Expected Fold</th>
-                            <th>Shrinkage</th>
-                            <th>Net Amount</th>
+                            <th>Shrinkage(%)</th>
+                            <th>Net Quantity</th>
                         </tr>
                         @{
                             if (Model != null && Model.PrinterChalanDetails != null)
