--- a/StockManager/Views/Customers/Edit.cshtml
+++ b/StockManager/Views/Customers/Edit.cshtml
@@ -105,5 +105,6 @@
 </div>
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/js/jquery.validate.min.js"></script>
+    <script src="~/Scripts/js/jquery.validate.unobtrusive.min.js"></script>
 }
