Top company name fix

--- a/StockManager/Views/Shared/_Layout.cshtml
+++ b/StockManager/Views/Shared/_Layout.cshtml
@@ -34,22 +34,21 @@
         }
 
         #companyDetails {
-            display: none;
             position: absolute;
             top: 5px;
             left: 50%;
-        }
-        /*
-        .page-top {
-            position: relative;
-            z-index: -1;
+            font-weight: 400;
         }
 
-        @@media all and (max-width: 522px) {
+            #companyDetails h4 {
+                font-weight: 400;
+            }
+
+        @@media all and (max-width: 486px) {
             #companyDetails {
                 display: none;
             }
-        }*/
+        }
     </style>
     @Styles.Render("~/Content/DateCSS")
     @RenderSection("css", false)
